--- a/packages/react-ts-app/package.json
+++ b/packages/react-ts-app/package.json
@@ -10,6 +10,7 @@
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-scripts": "3.1.2",
+    "react-ts-components": "^0.0.1",
     "typescript": "3.6.3"
   },
   "scripts": {
