--- a/packages/react-ts-components/.babelrc
+++ b/packages/react-ts-components/.babelrc
@@ -1,6 +1,9 @@
 {
-    "presets": ["@babel/preset-env", ["@babel/preset-typescript", {
-        "isTSX": true,
-        "allExtensions": true
+    "presets": [
+        "@babel/preset-env", 
+        "@babel/preset-react",
+        ["@babel/preset-typescript", {
+            "isTSX": true,
+            "allExtensions": true
     }]]
 }
