--- a/packages/react-ts-components/package.json
+++ b/packages/react-ts-components/package.json
@@ -42,6 +42,7 @@
     "@babel/core": "^7.6.0",
     "@babel/plugin-transform-typescript": "^7.6.0",
     "@babel/preset-env": "^7.6.0",
+    "@babel/preset-react": "^7.0.0",
     "@babel/preset-typescript": "^7.6.0",
     "@storybook/addon-actions": "^5.2.1",
     "@storybook/addon-info": "^5.2.1",
