--- a/packages/react-ts-app/package.json
+++ b/packages/react-ts-app/package.json
@@ -9,6 +9,7 @@
     "@types/react-dom": "16.9.0",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
+    "react-rainbow-components": "nexxtway/react-rainbow#pull/995/head",
     "react-scripts": "3.1.2",
     "react-ts-components": "^0.0.2",
     "typescript": "3.6.3"
@@ -33,5 +34,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@material-ui/core": "^4.4.3",
+    "cross-env": "^6.0.0"
   }
 }
